301: navbar z-index fixed, like REALLY THIS TIME

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -45,7 +45,7 @@ div.page-template > * {
 	z-index: auto;
 }
 .top-navigation {
-	z-index: 10000;
+	z-index: 9000;
 }
 
 
